Fix "contact us" link

--- a/products.html
+++ b/products.html
@@ -99,7 +99,7 @@
 
 
     <h4>Want to rave about a product? Or suggest a one that we should sell?
-        Head over to <a href="traderho.html">Contact Us</a> and let us know!
+        Head over to <a href="contact.html">Contact Us</a> and let us know!
     </h4>
     <div class="bottom-of-page">
         <p>Thanks for reading :)</p>
